--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -320,3 +320,18 @@
 	publisher	= {Kluwer Academic Publishers}, 
 	year		= 1998
 }
+
+@Techreport{ucid,
+	author 		= {Schaefer, G. and Stich, M.},
+	title	 	= {{UCID} - An Uncompressed Colour Image Database},
+	institution = {School of Computing and Technology, The Nottingham Trent University},
+	address 	= {Nottingham, United Kingdom},
+	year 		= 2003
+}
+
+@Inproceedings{kato:cbir_using_stochastic_paintbrush,
+	author		= {Kato, Z. and Ji, X. and Sziranyi, T. and Toth, Z. and Czuni, L.},
+	title		= {Content-based image retrieval using stochastic paintbrush transformation},
+	year		= 2002,
+	booktitle	= {Proceedings IEEE International Conference on Image Processing (ICIP)},
+}
