--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -18,6 +18,7 @@
 % lijst met woorden die LaTeX verkeerd splitst
 \hyphenation{vaag-ver-za-me-ling L-vaag-ver-za-me-ling} 
 
+\makeindex
 
 \begin{document}
 
@@ -83,5 +84,7 @@
 
 \bibliography{thesis}           % dit bestand bevat informatie die
                                 %door bibtex wordt gelezen
+
+\printindex
 
 \end{document}
