--- a/Thesis/kleurgeb.tex
+++ b/Thesis/kleurgeb.tex
@@ -5,12 +5,12 @@ vergelijken op basis van de kleuren die er in voorkomen. We identificeren de bee
 in dit geval dus met vaagverzamelingen in een universum dat bestaat uit kleuren 
 in plaats van beeldpunten. Vermits kleur \'e\'en  van de meest gebruikte kenmerken is bij CBIR 
 \cite{rui:image_retr, schettini:survey_of_methods_for_colour_image_indexing_and_retrieval}, mogen we 
-verwachten dat die \emph{kleurgebaseerde} aanpak effici\"ente 
+verwachten dat die \defin{kleurgebaseerde similariteitsmaat}{kleurgebaseerde} aanpak effici\"ente 
 similariteitsmaten zal opleveren. 
 
 \section{Histogrammen}
 
-Een \emph{histogram} van een kleurbeeld is een voorstelling van de frequentieverdeling 
+Een \defin{histogram} van een kleurbeeld is een voorstelling van de frequentieverdeling 
 van de verschillende kleuren. De waarde van het histogram voor een kleurbeeld 
 $A$ in de kleur $c \in C$ is dus gelijk aan het totaal aantal pixels in het beeld met 
 kleur $c$. Om de complexiteit te beperken wordt er in de praktijk gebruik gemaakt
@@ -44,7 +44,7 @@ van beeld $A$:
 \begin{displaymath}
 H_A(c) = \frac{\displaystyle h_A(c)}{\displaystyle \max_{c \in C'}(h_A(c))}
 \end{displaymath}
-Een dergelijke vaagverzameling noemen we een \emph{pseudo-vaag histogram}. 
+Een dergelijke vaagverzameling noemen we een \defin{pseudo-vaag histogram}. 
 De kleur die het meest voorkomt heeft daarbij lidmaatschapsgraad $1$. Alle 
 andere kleuren hebben kleinere lidmaatschapsgraden. 
 
@@ -325,7 +325,7 @@ van het geel bootje (HSV (a), Irb (b), I1I2I3 (c), XYZ (d), Yxy (e) en L*a*b* (f
 
 Naast de bovenstaande vage interpretatie van het klassieke kleurhistogram, 
 beschouwen we ook nog een gelijkaardige kleurbeschrijving die we op een 
-``volledig vage'' manier opbouwen. Bij dat \emph{vaaghistogram} maken we 
+``volledig vage'' manier opbouwen. Bij dat \defin{vaaghistogram} maken we 
 gebruik van het L*a*b* kleurmodel en beschouwen we een 
 vaagverzameling voor elke kleur. Stel dat $lab$ de kleuren uit $C$ afbeeldt op de
 corresponderende niet-genormaliseerde L*a*b*-co\"ordinaten. De lidmaatschapsgraad van een 
@@ -341,7 +341,7 @@ defini\"eren we dan als volgt \cite{vertan:fuzzy_histograms}:
 met $d$ de Euclidische afstand en $\lambda$ een vrij te kiezen parameter. In 
 het geval van (niet-ge\-nor\-ma\-li\-seer\-de) L*a*b* komt de afstand $2.3$ namelijk 
 overeen met de zogenaamde 
-\emph{just noticeable difference} (JND) \cite{sharma:digital_color_imaging}. 
+\defin{just noticeable difference} (JND) \cite{sharma:digital_color_imaging}. 
 Kleuren waarvan de onderlinge afstand kleiner dan of gelijk aan die JND is, 
 kunnen door de mens niet onderscheiden worden.
 
@@ -915,7 +915,7 @@ pseudo-vage histogrammen vergeleken worden met behulp van een
 vaagsimilariteitsmaat die de bins rechtstreeks met elkaar vergelijkt, zullen 
 daardoor in bepaalde gevallen verkeerdelijk lage similariteiten als resultaat 
 geven. De andere vaagsimilariteitsmaten ($M_5$, $M_{5c}$, $M_{11}$ en 
-$M_{11c}$) leiden niet tot dergelijke \emph{valse negatieven}, maar in 
+$M_{11c}$) leiden niet tot dergelijke \defin{valse negatieven}, maar in 
 \ref{sectie:histogrammen_experimentele_observaties} hebben we aangetoond dat 
 die maten dan weer valse positieven veroorzaken.
 
@@ -941,7 +941,7 @@ beeld op een willekeurig manier verplaatsen, dan zal er immers niets veranderen 
 de geassocieerde histogrammen. Het beeld zelf zal er dan meestal wel totaal anders uitzien.  
 
 We kunnen pseudo-vage histogrammen construeren die minder gevoelig zijn voor de bovenstaande problemen,
-door \emph{uitgebreide histogrammen} te beschouwen. 
+door \defin{uitgebreid histogram}{uitgebreide histogrammen} te beschouwen. 
 %De uitgebreide versie $\mathcal{H}'_A$ van een histogram
 %$\mathcal{H}_A \in \{H_A,\widetilde{H}_A\}$ geassocieerd met een beeld $A$ defini\"eren we
 %als volgt:
@@ -1009,7 +1009,7 @@ afhangen van de waarden van ``naburige'' bins met een perceptueel similaire kleu
  
 In het SCT-histogram liggen de ``naburige'' bins van een bin ook letterlijk naast
 die bin. Het is bijgevolg zeer geschikt om
-\emph{smoothing} op toe te passen \cite{sural:perceptually_smooth_histogram}. De gladde versie van
+\defin{smoothing} op toe te passen \cite{sural:perceptually_smooth_histogram}. De gladde versie van
 een SCT-histogram is dan een uitgebreid histogram waarbij bijvoorbeeld 
 $w_{A,c}(p)=s(bin(c),bin(A(p)))$, $\forall p \in P$, en
 \begin{displaymath}
@@ -1287,7 +1287,7 @@ voor alle $c \in C'$. De pseudo-vage uitgebreide
 histogrammen die we met $\alpha=3 \cdot \gamma / 5$ en $\gamma = \min\{M/2, N/2\}$ bekomen voor 
 de beelden van het geel bootje, worden weergegeven in
 figuur~\ref{fig:uitgebreide_sct-histogrammen_spatial}. We noemen dergelijke histogrammen
-\emph{spatiale histogrammen}. Figuur~\ref{fig:constructie_spatiale_histogrammen} illustreert
+\defin{spatiaal histogram}{spatiale histogrammen}. Figuur~\ref{fig:constructie_spatiale_histogrammen} illustreert
 de constructie van een kleurgebaseerde similariteitsmaat op basis van het pseudo-vaag 
 spatiaal SCT-histogram.
 
@@ -1357,7 +1357,7 @@ bootje.
 % waargenomen verschil tussen de beelden.
  
 Een spatiaal histogram, geassocieerd met een beeld $A$, kan ge\"interpreteerd worden als het 
-histogram voor een \emph{vaag gebied} in $A$. Als we een beeld $B$ construeren door de pixels
+histogram voor een \defin{vaag gebied} in $A$. Als we een beeld $B$ construeren door de pixels
 van $A$ willekeurig te verplaatsen, dan zullen de spatiale histogrammen van $A$ en $B$
 meestal niet gelijk zijn. De ``gewone'' histogrammen van $A$ en $B$ zijn dan uiteraard wel gelijk. 
 Door gebruik te maken van vage gebieden kunnen we het aantal mogelijke
@@ -1371,7 +1371,7 @@ manier om de invloed van minder belangrijke pixels te beperken
 \cite{vertan:upgrading_color_distribution_for_ir}. Dat kan door 
 $w_{A,c}=\delta(bin(c)-bin(A(p))) \cdot r_{A}$ te kiezen, met $r_{A}(p)$ de randsterkte op positie $p \in P$ in $A$.
 Die randsterkte bepalen we op basis van de gradi\"ent, zoals uitgelegd in \ref{sectie:randdetectie}.  
-We noemen de histogrammen die we zo bekomen \emph{randhistogrammen}. 
+We noemen de histogrammen die we zo bekomen \defin{randhistogram}{randhistogrammen}. 
 Figuur~\ref{fig:uitgebreide_sct-histogrammen_edgy} toont een aantal voorbeelden van
 pseudo-vage SCT-histogrammen die gebaseerd zijn op een randhistogram.
 Via de keuze $w_{A,c}(p)=s(bin(c),bin(A(c))) \cdot r(d_m(p))$, $\forall p \in P$, 
